<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".view.usuarios.registro.UserTypeSelector"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <android.support.v7.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/boton_refugiado"
            android:text="@string/refugee" />

        <Space style="@style/espacio"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/boton_voluntario"
            android:text="@string/volunteer" />



    </LinearLayout>


</RelativeLayout>